kubernetes/test/api-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: api-frontend
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: api-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-frontend
spec:
  selector:
    matchLabels:
      app: api-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: api-frontend
    spec:
      containers:
        - name: api-frontend
          image: martynpi/api-frontend:3.0.0
          ports:
            - containerPort: 8080
