kubernetes/test/api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api-backend
            backend:
              serviceName: api-backend
              servicePort: 8080
          - path: /api-frontend
            backend:
              serviceName: api-frontend
              servicePort: 8080
          - path: /api-tests
            backend:
              serviceName: api-tests
              servicePort: 8080
